--- a/src/components/Tabs/index-mobile.scss
+++ b/src/components/Tabs/index-mobile.scss
@@ -1,4 +1,5 @@
 .container-mobile {
+  padding-bottom: 45px;
   .tabs {
     .tab-nav-list {
       display: flex;
@@ -20,7 +21,7 @@
     }
     .tabs-content-list {
       .tabs-content-item {
-        padding: 10px;
+        padding: 10px 0px;
       }
     }
   }
